Nov 14th Cls6 (Peter) - Little tweaks to main and Focus3 files
Nov 14th Cls7 (Peter) - Bug Fixes

Nov 14th MT3 (Peter) - Change log not working properly?

Nov 15th Cls8 (Peter) - Additional Fixes prev Focus 3B
Nov 15th Cls9 (Peter) - Change Log Updates

Nov 15th MT4 (Peter) - CSS updating!
Nov 15th MT5 (Peter) - CSS updating 222222!
Nov 15th MT6 (Peter) - Main Maintinence Update (Also added some image files)
Nov 15th MT7 (Peter) - Deleted some old deprecated files.

Nov 16th MT8 (Peter) - G'morning! Just moved some files. That's it. Have a nice day!

Nov 16th PU9 (Peter) - Just making some header file changes.
Nov 16th PU10 (Peter) - Just making some header file changes. 222222222
Nov 16th PU11 (Peter) - Just making some header file changes. 333333333
Nov 16th PU12 (Peter) - JS Header updating 1
Nov 16th PU13 (Peter) - JS Header updating 2

Nov 17th PU14 (Peter) - JFocus Project Easier Viewing webpage creation started
Nov 17th PU15 (Peter) - JFocus Project Easier Viewing webpage creation finished. Testing Beginning soon.
Nov 17th PU16 (Peter) - JFocus folder couldn't access the CSS file. That's all fixed and in order now!
Nov 17th PU17 (Peter) - JFocus redirect added and text removed
Nov 17th PU18 (Peter) - Old files updated

Nov 20th MT9 (Peter) - Git Logs tell me that there is a merge error. Trying to fix it right now.
Nov 20th PU19 (Peter) - JFocus2 Update V1
Nov 20th PU20 (Peter) - JFocus2 Update V2
Nov 20th PU21 (Peter) - JFocus2 Update V3
Nov 20th PU22 (Peter) - JFocus2 Update V4
Nov 20th PU23 (Peter) - File allocation changed
Nov 20th PU24 (Peter) - File size change
Nov 20th PU25 (Peter) - Main and JFocus File redirect changed with the Change Log recieving a slight update
Nov 20th NULL58297693868934354543 (Peter) - Main title added back
Nov 20th PU26 (Peter) - Fixed a bug (I think)



Thanks for taking your time to read the change log! 
I might sound cold in many of the update descriptions, but it's like that just for time efficiency. 
Have a nice day! :)