@@ -74,6 +74,11 @@ Nov 20th PU25 (Peter) - Main and JFocus File redirect changed with the Change Lo
 Nov 20th NULL58297693868934354543 (Peter) - Main title added back
 Nov 20th PU26 (Peter) - Fixed a bug (I think)
 
+IT'S MY BIRTHDAY!!! 🎂
+Nov 21th PU27 (Peter) - I fixed the bug but that created another bug so... yeah. Fixed that one too! (Never happened, got replaced/done by the BIRTHDAY1 update.)
+Nov 21st BIRTHDAY1 (Peter) - Birthday Update!
+
+
 
 
 Thanks for taking your time to read the change log! 
